[project]
name = "sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "ai-data-science-team>=0.0.0.9016",
    "chardet>=5.2.0",
    "colpali-engine>=0.3.10",
    "datasets>=3.5.0",
    "fastapi>=0.115.12",
    "fastembed>=0.5.1",
    "hf-xet>=1.0.3",
    "huggingface-hub>=0.30.1",
    "inflection>=0.5.1",
    "instructor[ollama]>=1.7.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.74",
    "langgraph-cli[inmem]>=0.1.73",
    "langgraph-supervisor>=0.0.16",
    "llama-index>=0.12.30",
    "llama-index-embeddings-huggingface>=0.5.3",
    "nebula3-python>=3.8.3",
    "ollama>=0.4.7",
    "onnx>=1.17.0",
    "openpyxl>=3.1.5",
    "optimum>=1.24.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pypdf>=5.4.0",
    "qdrant-client[fastembed]>=1.13.2",
    "rapidocr-onnxruntime>=1.4.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.0.2",
    "streamlit>=1.42.1",
    "transformers>=4.51.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "xlrd>=2.0.1",
    "ydata-profiling>=4.16.1",
]
